# compute-capacity-orchestrator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tatus
.github/workflows/: ci.yml
app/: streamlit_app.py
app/views/: control_config.py  input_validation.py  offline_page.py  simulation_components.py  simulation_page.py  simulation_view.py  snapshot_components.py  snapshot_page.py  snapshot_view.py  time_indexed_page.py  tooltips.py
docs/: architecture.md  formulation.md  roadmap.md  terminology.md
scripts/: run_simulation_demo.py  run_snapshot_greedy_demo.py  run_snapshot_pyomo_demo.py  run_snapshot_scale_demo.py
src/compute_capacity_orchestrator/: __init__.py
src/compute_capacity_orchestrator/engines/: __init__.py  base.py  greedy.py  pyomo_snapshot.py  validation.py
src/compute_capacity_orchestrator/experiments/: __init__.py  scenarios.py
src/compute_capacity_orchestrator/metrics/: __init__.py  decision_metrics.py
src/compute_capacity_orchestrator/schemas/: resources.py  schedule.py  workload.py
tests/: conftest.py
tests/app/: test_input_validation.py  test_simulation_components.py  test_simulation_view.py  test_snapshot_components.py  test_snapshot_view.py
tests/engines/: test_greedy_engine.py  test_pyomo_snapshot.py  test_validation.py
tests/experiments/: test_scenarios.py
tests/metrics/: test_decision_metrics.py
tests/schemas/: test_resources.py  test_schedule.py  test_schemas.py  test_workload.py
tests/simulation/: test_arrivals.py  test_simulation_loop.py  test_state.py  test_transition.py
(+5 files in other folders)
