[project]
name = "compute-capacity-orchestrator"
version = "0.1.0"
description = "Optimization and simulation sandbox for GPU workload scheduling and compute-capacity policy evaluation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Momo Adegbindin" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "streamlit>=1.50"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10"
]

opt = [
    "pyomo>=6.9",
    "highspy>=1.10",
]

app = [
    "pyomo>=6.9",
    "highspy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_capacity_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]